# PL_VIO_Initialization

./: CMakeLists.txt  README.md  evaluate.cc
config/: EuRoC.yaml
src/camera/: Camera.cc  Camera.h  CameraFactory.cc  CameraFactory.h  PinholeCamera.cc  PinholeCamera.h
src/feature/: ORBextractor.cc  ORBextractor.h  feature.cc  line_feature.cc  line_feature.h  orbpoint.cc  orbpoint.h  point_feature.cc  point_feature.h
src/initialization/: imu_ceres.h  imu_preintegration.cc  imu_preintegration.h  initialization.cc  initialization.h  interpolation.cc  interpolation.h  main.cc  polynomial.cc  polynomial.h  sfm.cc  sfm.h  so3.cc  so3.h
src/simulation/: imu.cc  imu.h  param.cc  param.h  simulation.cc  utilities.cc  utilities.h
src/util/: csv.h  io.cc  io.h  timer.cc  timer.h
src/visualization/: visual.cc  visual.h
